wrapped li with the a tag, so you can click anywhere on the row and be redirected. slight css issue with the border top, but will fix once all sections are wrapped correctly

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -125,10 +125,10 @@
      .nav-list-item-mobile:last-child{
         border-bottom: 1px solid rgba(#546A93, 0.3);
      }
-     .nav-list-item-mobile:nth-child(1n+5){
-        justify-content: start;
-        gap: 1rem;
-     }
+    //  .nav-list-item-mobile:nth-child(1n+5){
+    //     justify-content: start;
+    //     gap: 1rem;
+    //  }
 
      .nav-list-item-anchor{
         text-decoration: none;
